# Goat-Boy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Cpu.cpp  Cpu.h  Device.cpp  Device.h  Goatboy.cpp  Gui.cpp  Gui.h  Joypad.cpp  Mmu.cpp  Ppu.cpp  Ppu.h  instructions.cpp  instructions.h  main.cpp
src/MBC/: MBC_0.cpp  MBC_3.cpp
src/MBC/headers/: MBC.h  MBC_0.h  MBC_3.h
src/headers/: Cpu.h  Device.h  Gui.h  Joypad.h  Mmu.h  Ppu.h  cycles.h  instructions.h
